<resources>
    <string name="app_name">Daily Motivational Quotes</string>
    <string name="loading">Preparing Quotes…</string>
    <string name="quotes">quotes</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="authors">Authors</string>
    <string name="options">Options</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_the_app">Share the App</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="more_apps">More Apps</string>
    <string name="go_back">Go Back</string>
    <string name="menu">Menu</string>
    <string name="to_list_view">Switch To List View</string>
    <string name="page_view">Page View</string>

    <string name="appodeal_app_id">0accb6162fbca8ed3c560928088657a5353b42262030eec9</string>
    <string name="app_share_message">"Hi! Take a look at this amazing app Daily Motivational Quotes. Its free!! You should get it too."</string>
    <string name="html_app_name">The <i>Daily Motivational Quotes App </i> is a collection of Motivational messages from the world\'s renowned and influential people in all parts of the world. Inspire and motivate your day with these quotes filled with wisdom and life experiences.</string>
    <string name="version">Version 1.0</string>

    <string name="developer_acknowledgement">App developed by Sarftec</string>
    <string name="for_more_apps">"<u>Click Here for More Apps</u>"</string>
    <string name="no_favorite_message">No Favorite Quotes Available</string>
    <string name="favorite_quote">Favorite Quote</string>
    <string name="notifications">Notifications</string>
    <string name="vibrate">Vibration</string>

    <string name="favorite_quotes">Favorite Quotes</string>
    <string name="ratings_title">Enjoying Daily Motivational Quotes?</string>
    <string name="ratings_message">Hi. We would love to know if this app was really helpful. Kindly leave a review if you love the app or feel we could be doing better</string>
    <string name="ratings_review">Write a review</string>
    <string name="ratings_next_time">Next time</string>

    <string name="drawer_header_message">Start your day with JOY</string>
    <string name="rate_app">Rate app</string>


    <string name="admob_test_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_test_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_test_reward_video_id">ca-app-pub-3940256099942544/5224354917</string>


    <string name="admob_banner_main">@string/admob_test_banner_id</string>
    <string name="admob_banner_detail">@string/admob_test_banner_id</string>
    <string name="admob_banner_favorite_list">@string/admob_test_banner_id</string>
    <string name="admob_banner_favorite_quote">@string/admob_test_banner_id</string>
    <string name="admob_banner_settings">@string/admob_test_banner_id</string>

    <string name="admob_interstitial_id">@string/admob_test_interstitial_id</string>
    <string name="admob_reward_video_id">@string/admob_test_reward_video_id</string>

    <!--
     <string name="admob_banner_main">ca-app-pub-6150813452529727/4712242413</string>
    <string name="admob_banner_detail">ca-app-pub-6150813452529727/7978885229</string>
    <string name="admob_banner_favorite_list">ca-app-pub-6150813452529727/5066276260</string>
    <string name="admob_banner_favorite_quote">ca-app-pub-6150813452529727/5339229690</string>
    <string name="admob_banner_settings">ca-app-pub-6150813452529727/7212598462</string>

    <string name="admob_interstitial_id">ca-app-pub-6150813452529727/7787313531</string>
    <string name="admob_reward_video_id">ca-app-pub-6150813452529727/8243103946</string>
    -->
</resources>