<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/color_primary">

    <ImageView
        android:id="@+id/back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:srcCompat="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/go_back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/raleway_bold"
        android:maxLines="1"
        android:textAppearance="@style/ToolbarTextAppearance"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toStartOf="@+id/to_page_view"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back"
        tools:text="Albert Einstein Quotes" />

    <ImageView
        android:id="@+id/to_list_view"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:contentDescription="@string/to_list_view"
        app:tint="@color/color_primary_variant"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:srcCompat="@drawable/list_view" />

    <ImageView
        android:id="@+id/to_page_view"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusable="true"
        app:tint="@color/color_primary_variant"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/page_view"
        app:layout_constraintBottom_toBottomOf="@+id/to_list_view"
        app:layout_constraintEnd_toStartOf="@+id/to_list_view"
        app:layout_constraintTop_toTopOf="@+id/to_list_view"
        app:srcCompat="@drawable/page_view" />
</androidx.constraintlayout.widget.ConstraintLayout>