<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="layoutBinding"
            type="com.sarftec.dailymotivationalquotes.presentation.binding.MainBinding" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/menu" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/raleway_bold"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textAppearance="@style/ToolbarTextAppearance"
            android:textColor="@color/color_on_primary"
            app:layout_constraintBottom_toBottomOf="@+id/menu"
            app:layout_constraintEnd_toStartOf="@+id/main_favorite"
            app:layout_constraintStart_toEndOf="@+id/menu"
            app:layout_constraintTop_toTopOf="@+id/menu" />

        <ImageView
            android:id="@+id/main_favorite"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> layoutBinding.onFavorite.invoke()}"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toStartOf="@+id/rate_this_app"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/menu"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:srcCompat="@drawable/favorite_filled"
            app:tint="#FF3D00" />

        <ImageView
            android:id="@+id/rate_this_app"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> layoutBinding.onRate.invoke()}"
            app:image="@{layoutBinding.backgroundImage}"
            app:layout_constraintBottom_toBottomOf="@+id/main_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_favorite"
            tools:srcCompat="@drawable/share"
            android:contentDescription="@string/rate_app" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>